--- a/src/components/User/FindADoctor.css
+++ b/src/components/User/FindADoctor.css
@@ -1,10 +1,21 @@
 .doctor-image {
   width: 200px;
   height: 200px;
+  border-radius: 50%;
+  margin-top: 15px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .center {
   width: 80%;
   margin: auto;
   text-align: center;
+}
+.doctor-card {
+  width: 300px;
+  height: 400px;
+  border: none;
+  background-color: rgba(211, 211, 211, 0.879);
+  border-radius: 20px;
 }
