--- a/src/components/Layouts/style.css
+++ b/src/components/Layouts/style.css
@@ -61,12 +61,13 @@
 }
 .navbar .login {
   color: black;
+
   border: none;
   border-radius: 10px;
   padding: 10px 20px;
   font-size: 16px;
   font-weight: 500;
-  margin-left: 10px;
+  text-indent: 16px;
 }
 .navbar .login:hover {
   background-color: #3394fca8;
